# PANGU

./: .gitignore  .gitmodules  .pangu_build.env  .pangu_build.env.root  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_zh.md  chap04.tex
.claude/: settings.local.json
doc/: grmhd_intro.md  heating_models.md
pangu/problem/BondiFlow/: ProblemGenerator.cpp  inputfile
pangu/problem/BrioWuShocktube/: ProblemGenerator.cpp  inputfile
pangu/problem/KelvinHelmholtz/: ProblemGenerator.cpp  inputfile
pangu/problem/OrszagTangVortex/: ProblemGenerator.cpp  inputfile
pangu/problem/__active_problem__/: problem_generator.cpp
pangu/problem/blast/: inputfile  problem_generator.cpp
pangu/problem/bondi_flow/: inputfile  problem_generator.cpp
pangu/problem/bondi_flow_cks/: inputfile  problem_generator.cpp
pangu/problem/fm_torus/: inputfile  problem_generator.cpp
pangu/problem/fm_torus_cks/: inputfile  problem_generator.cpp
pangu/problem/fm_torus_mks/: inputfile  problem_generator.cpp
pangu/problem/kelvin_helmholtz/: inputfile  problem_generator.cpp
pangu/problem/magnetised_bondi/: inputfile  problem_generator.cpp
pangu/problem/orszag_tang_vortex/: inputfile  problem_generator.cpp
pangu/problem/shock_tube/: inputfile  problem_generator.cpp
pangu/src/: CMakeLists.txt  main.cc  main.cpp
pangu/src/constrained_transport/: constrained_transport.cc  constrained_transport.h
pangu/src/constrainted_transport/: constrainted_transport.hpp
pangu/src/fixer/: fix_primitive.hpp  fix_recovery.hpp  primitive_fixer.cc  primitive_fixer.h  recovery_fixer.cc  recovery_fixer.h
pangu/src/flux/: conservative.hpp  flux.hpp  flux_lax.hpp  source.hpp
pangu/src/initialization/: package_registration.cc  package_registration.h  timestep_estimation.cc  timestep_estimation.h  variable_mnemonics.h
pangu/src/initialize/: initialize.hpp  mnemonic.hpp  timestep.hpp
pangu/src/interpolation/: interpolater_mc.h  interpolater_ppm4.h
pangu/src/mesh/: amr_criteria.hpp  q_factor.hpp  q_factor_calculation.cc  q_factor_calculation.h  refinement_criteria.cc  refinement_criteria.h
pangu/src/metric/: BL.h  CKS.h  Kerr.hpp  MKS.h  Minkowski.hpp  boyer_lindquist.h  christoffel.h  kerr_schwarzchild.h  linear_algebra.hpp  minkowski.h  tensor_algebra.h  tetrad.h
pangu/src/numerical_correction/: primitive_fixer.cc  primitive_fixer.h  recovery_fixer.cc  recovery_fixer.h
pangu/src/physics/: AlfvenVelocity.hpp  EnergyMomentumTensor.hpp  alfven_velocity.h  contravariant_flux.h  energy_momentum_tensor.h  fast_magnetosonic_speed.h  flux.hpp  heating_model.h  state.hpp  state_calculation.h  two_temperature.h
pangu/src/physics_transformation/: alfven_velocity.h  contravariant_flux.h  energy_momentum_tensor.h  state_calculation.h
pangu/src/reconstruct/: InterpolaterMC.hpp
pangu/src/recovery/: Recovery.hpp  Restorer.hpp  Scheme1D.hpp  Scheme1Dvsq.hpp  Scheme2D.hpp  Transform.hpp  constants.h  invertor.cc  invertor.h  scheme_1d.h  scheme_1d_vsq.h  scheme_2d.h  scheme_kastaun.h  tetrad.cc  tetrad.h
pangu/src/riemann_solver/: conservative.cc  conservative.h  electron_heating.cc  electron_heating.h  geometric_source_term.cc  geometric_source_term.h  hll.cc  hll.h  hlld.cc  hlld.h  lax_friedrichs_flux.cc  lax_friedrichs_flux.h  laxf.cc  laxf.h  riemann_solver.cc  riemann_solver.h  source_term.cc  source_term.h
pangu/src/simulator/: Simulator.cpp  Simulator.hpp  SimulatorGRMHD.cpp  SimulatorSRMHD.cpp
pangu/src/task_list/: ideal_grmhd.cc  ideal_srmhd.cc  task_list.h
scripts/python/: _cks_common.py  benchmark_brio_compare.py  xz_temperature_plot.py  xzplot.py  xzplot_cks.py
scripts/shell/: analyze.sh  execute.sh  make.sh  run.sh
